[project]
name = "langgraph-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "ipykernel>=6.29.5",
    "langchain[anthropic]>=0.3.24",
    "langgraph-cli[inmem]>=0.2.10",
    "langgraph>=0.3.34",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.12",
]
